Fix issue with medium zoom images
Zoomed images would appear under the hero image

--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -207,7 +207,7 @@
 
   .hero__image {
     position: relative;
-    z-index: 10;
+    z-index: 1;
     width: 370px;
     height: 470px;
     margin: 0 auto;
